Refactor collect to remove additional mongo writes